--- a/style.css
+++ b/style.css
@@ -132,8 +132,9 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    padding-top: 56.25%;
+    /* padding-top: 56.25%; */
     display: none;
+    background: black;
 }
 .responsive-iframe {
     position: absolute;
